other-vpol/docker-socket-requires-label/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx-allow-1
spec:
  containers:
    - image: nothinghere
      name: nginx
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    allow-docker: "true"
    run: nginx
  name: nginx-allow-2
spec:
  containers:
    - image: nothinghere
      name: nginx
  volumes:
    - hostPath:
        path: /var/run/docker.sock
      name: test
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    allow-docker: "false"
    run: nginx
  name: nginx-allow-3
spec:
  containers:
    - image: nothinghere
      name: nginx
  volumes:
    - hostPath:
        path: /random/value
      name: test
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    allow-docker: "false"
    run: nginx
  name: nginx-bad-1
spec:
  containers:
    - image: nothinghere
      name: nginx
  volumes:
    - hostPath:
        path: /var/run/docker.sock
      name: test
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: nginx
  name: nginx-bad-2
spec:
  containers:
    - image: nothinghere
      name: nginx
  volumes:
    - hostPath:
        path: /var/run/docker.sock
      name: test
